# pnx

./: CMakeLists.txt  main.cpp
armor_detector/: CMakeLists.txt
armor_detector/include/: armor.hpp  detector.hpp  number_classifier.hpp  pnp_solver.hpp
armor_detector/reference/: coner_correcter.cpp  number_classifier.cpp  number_classifier.hpp  tracker.cpp
armor_detector/src/: armor.cpp  detector.cpp  number_classifier.cpp  pnp_solver.cpp
armor_tracker/: CMakeLists.txt
armor_tracker/include/: tracker.hpp
armor_tracker/src/: tracker.cpp
img_input/: test2.avi
input/: 2BDFA1701242.yaml
